--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ section{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(131, 131, 219);
+    background-color: rgb(178, 178, 211);
 }
 .gameArea{
     display: flex;
@@ -41,6 +41,7 @@ h3{
     text-align: center;
     font-size: 4vh;
     padding-bottom: 6vh;
+    text-shadow: 2px 2px 2px gray;
 }
 input{
     width: 40%;
@@ -60,6 +61,7 @@ button{
     border: black;
     padding: 1rem;
     border-radius: 15px;
+    box-shadow: 2px 2px 2px gray;
     /* margin-top: 10px; */
 }
 button.btn{
@@ -80,4 +82,12 @@ button.btn:active{
 }
 .hidden{
     display: none;
+}
+footer{
+    background-color: rgb(110, 110, 226);
+    height: 5vh;
+    text-align: end;
+    line-height: 5vh;
+    color: white;
+    padding-right: 5vw;
 }
